--- a/public/css/stylesheets/partials/customer-reviews/_global.sass
+++ b/public/css/stylesheets/partials/customer-reviews/_global.sass
@@ -5,7 +5,7 @@
   display: flex
   justify-content: center
   align-items: center
-  width: 45%
+  width: 65%
   padding: 2em 0
 
 .swiper-wrapper
