--- a/public/css/stylesheets/partials/footer/_footer.sass
+++ b/public/css/stylesheets/partials/footer/_footer.sass
@@ -33,6 +33,12 @@
 
 .contact
   grid-area: contact
+  a
+    text-decoration: underline
+
+.messenger
+  display: flex
+  align-items: center
 
 .message
   grid-area: message
